--- a/Kids Coding - iLabAfrica Strathmore University/HTML/Introduction/index.html
+++ b/Kids Coding - iLabAfrica Strathmore University/HTML/Introduction/index.html
@@ -6,11 +6,13 @@
         <title>My Cookie Company</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <nav><a href="index.html">Home</a> | <a href="menu.html">Menu</a> | <a href="orderform.html">Order Form</a></nav>
         <h1>Welcome to My Cookie Company</h1>
         <p><strong>We offer a variety of delicious cookies.</strong></p>
+        <h2>1. Our Cookie Menu in order</h2>
         <ol>
             <li>Chocolate Chip</li>
             <li>Oatmeal Raisin</li>
@@ -18,6 +20,7 @@
             <li>Snickerdoodle</li>
             <li>Double Chocolate</li>
         </ol>
+        <h2>2. Our Cookie Menu Unordered</h2>
         <ul>
             <li>Order online</li>
             <li>Visit our store</li>
