--- a/Kids Coding - iLabAfrica Strathmore University/JavaScript/Kids&Teens/Fundamentals/demo.html
+++ b/Kids Coding - iLabAfrica Strathmore University/JavaScript/Kids&Teens/Fundamentals/demo.html
@@ -13,6 +13,9 @@
        <!--Display current date and time-->
        <button type="button" onclick="document.getElementById('demo').innerHTML = Date()"> Click Me to show date and time </button>
        <p id='demo'>Hello JavaScript!</p>
+       <button type="button" onclick="document.getElementById('demo').innerHTML = Date()"> Click Me </button>
+       <p id='demo'>Click the button to display the current date and time.</p>
+       <!--Different id-->
        <p id="scripy"></p>
 
        <script>
