--- a/Kids Coding - iLabAfrica Strathmore University/HTML/btw.html
+++ b/Kids Coding - iLabAfrica Strathmore University/HTML/btw.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Short DOM Exercise</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
 </head>
 <body>
 
@@ -11,25 +13,7 @@
     <button onclick="changeHTML()">Change HTML</button>
     <button onclick="writeNewPage()">Write New Page</button>
 
-    <script>
-        // Get the output paragraph
-        const output = document.getElementById('output');
-
-        function changeText() {
-            // innerText changes the text content only
-            output.innerText = 'This is plain new text!';
-        }
-
-        function changeHTML() {
-            // innerHTML changes the content and can include HTML tags
-            output.innerHTML = 'This is <strong>bold</strong> new text!';
-        }
-        
-        function writeNewPage() {
-            // document.write replaces the entire page content
-            document.write('<h1>A completely new page!</h1>');
-        }
-    </script>
+    <script src="script.js"></script>
 
 </body>
 </html>
